load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "example",
    srcs = ["example.cc"],
    deps = ["//:atomic_queue"],
    copts = select({
        "//conditions:default": [
            "-std=c++20",
        ],
        "@rules_cc//cc/compiler:msvc-cl": [
            "/std:c++20",
        ],
    }),
)
